--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Kranky&family=Noto+Sans+Bengali:wght@100..900&family=Rye&display=swap" rel="stylesheet">
     <title>Travel Guide</title>
   </head>
   <body>
